ADDED a front-end for displaying sample IEX API response.
[TODO] Accept form data and make API request accordingly

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/bilalq/iex-api#readme",
   "dependencies": {
+    "express": "^4.16.4",
     "iex-api": "0.0.3",
     "isomorphic-fetch": "^2.2.1"
   },
